# rust-orderbook

./: .gitignore  Cargo.toml  README.md  justfile
benches/: order_benchmarks.rs
examples/: binance.rs  depth_book.rs  quick_dev.rs
src/: engine.rs  lib.rs  main.rs  notifications.rs  tui.rs
src/orderbook/: book.rs  mod.rs  order_book.rs  orders.rs  price_levels.rs  types.rs
src/orderbook/types/: mod.rs  side.rs
