[package]
name = "rust-orderbook"
version = "0.1.0"
edition = "2021"

[lib]
name = "orderbooklib"
path = "src/lib.rs"

[[bin]]
name = "orderbook-bin"
path = "src/main.rs"

[profile.release]
lto = true
[profile.bench]
debug = true


[dependencies]
uuid = { version = "1.10", features = ["v7", "fast-rng"] }
rand = "0.8"
