[package]
name = "rust-orderbook"
version = "0.1.0"
edition = "2021"

[lib]
name = "orderbooklib"
path = "src/lib.rs"

[[bin]]
name = "orderbook-bin"
path = "src/main.rs"

[profile.release]
lto = true
[profile.bench]
debug = true


[dependencies]
uuid = { version = "1.10", features = ["v4", "v7", "v5", "fast-rng"] }
ratatui = "0.27"
crossterm = "0.28.1"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
crossbeam-channel = "0.5"
polars = { version = "0.41", features = ["lazy", "fmt"] }
rand = "0.8"
